Added some basic layouts and styling for them

--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&family=Quicksand:wght@300;500&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/shared.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
 </head>
 <body>
-    <h1>Hi!, Welcome to Travel Website.</h1>
+    <header>
+        <div id="logo">
+            <a href="/index.html">TravelSite</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="./places.html">Places</a></li>
+                <li>About</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <div>
+                <h1>John Doe's Travel Page</h1>
+                <p>Let's explore the world together!</p>
+                <a href="/places.html">Discover places</a>
+            </div>
+        </section>
+        <section id="highlights">
+            <h2>This is the heading of second section.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eveniet error quae, maxime quo esse maiores. Dicta asperiores commodi reprehenderit culpa modi iusto quis atque, impedit libero consequatur odit numquam?</p>
+        </section>
+    </main>
+    <footer>This is the footer</footer>
 </body>
 </html>
